glab dark mode fixes

--- a/ArticleTemplates/assets/scss/layout/_article--sponsorship.scss
+++ b/ArticleTemplates/assets/scss/layout/_article--sponsorship.scss
@@ -312,6 +312,7 @@
 
                         .sponsorship__inner {
                             padding: 0;
+                            margin: 0;
                         }
 
                         .sponsorship__formatted-sponsor-name {
@@ -320,7 +321,8 @@
 
                         @include mq($from: col2) {
                             border-top: 0;
-                            border-left: 1px rgba(color(global-adv-bands), .4) dotted;
+                            width: auto;
+                            display: block;
 
                             .sponsorship__formatted-sponsor-name {
                                 display: block;
